# old-norse-dictionary

./: .gitignore  Cargo.toml  README.md  asconfig.json  diesel.toml  pom.xml
migrations/2025-05-07-202141_create_word/: down.sql  up.sql
migrations/2025-05-07-202521_create_declension_table/: down.sql  up.sql
migrations/2025-05-07-202907_create_noun/: up.sql
src/: database.rs  main.rs  schema.rs
src/dtos/: mod.rs
src/main/kotlin/io/github/brayner05/dictionary/: OldNorseDictionaryApplication.kt
src/main/kotlin/io/github/brayner05/dictionary/controllers/: WordController.kt
src/main/kotlin/io/github/brayner05/dictionary/models/: Noun.kt  Pronoun.kt  Word.kt  declensions.kt
src/main/kotlin/io/github/brayner05/dictionary/repositories/: Repository.kt  WordRepository.kt
src/main/kotlin/io/github/brayner05/dictionary/util/: RuneSpelling.kt  wordProperties.kt
src/main/resources/: application.properties
src/models/: mod.rs  noun.rs  verb.rs  word.rs
src/repositories/: mod.rs  word_repository.rs
src/routes/: admin.rs  api.rs  mod.rs  word.rs
src/test/kotlin/io/github/brayner05/dictionary/: OldNorseDictionaryApplicationTests.kt
static/css/: main.css  main.css.map
static/js/: admin.js
static/sass/: _fonts.sass  admin.sass  main.sass  word.sass
templates/: admin.html.tera  word.html.tera
